Fix spacing/overflow bug when including extra content around swiper

--- a/frontend/src/components/Projects/_projects.scss
+++ b/frontend/src/components/Projects/_projects.scss
@@ -1,4 +1,5 @@
 .projects {
 	background: lightgreen;
-	
+	display: flex;
+	flex-direction: column;
 }
